# Pypi_package_starter

./: README.md  setup.cfg
src/example_package_fabscat.egg-info/: PKG-INFO  SOURCES.txt
